; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_cleanup_and_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_neighbour.c_neigh_cleanup_and_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.neighbour = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.neighbour*)* }

@RTM_DELNEIGH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.neighbour*)* @neigh_cleanup_and_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @neigh_cleanup_and_release(%struct.neighbour* %0) #0 {
  %2 = alloca %struct.neighbour*, align 8
  store %struct.neighbour* %0, %struct.neighbour** %2, align 8
  %3 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %4 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32 (%struct.neighbour*)*, i32 (%struct.neighbour*)** %6, align 8
  %8 = icmp ne i32 (%struct.neighbour*)* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %11 = getelementptr inbounds %struct.neighbour, %struct.neighbour* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32 (%struct.neighbour*)*, i32 (%struct.neighbour*)** %13, align 8
  %15 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %16 = call i32 %14(%struct.neighbour* %15)
  br label %17

17:                                               ; preds = %9, %1
  %18 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %19 = load i32, i32* @RTM_DELNEIGH, align 4
  %20 = call i32 @__neigh_notify(%struct.neighbour* %18, i32 %19, i32 0)
  %21 = load %struct.neighbour*, %struct.neighbour** %2, align 8
  %22 = call i32 @neigh_release(%struct.neighbour* %21)
  ret void
}

declare dso_local i32 @__neigh_notify(%struct.neighbour*, i32, i32) #1

declare dso_local i32 @neigh_release(%struct.neighbour*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
